--- a/index.Rmd
+++ b/index.Rmd
@@ -7,3 +7,6 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+
+
+This is our **[proposal](proposal.html)**
