--- a/index.Rmd
+++ b/index.Rmd
@@ -10,3 +10,5 @@ knitr::opts_chunk$set(echo = TRUE)
 
 
 This is our **[proposal](proposal.html)**.
+
+This is **[Regression](regression_analysis.html)**.
