--- a/topic1.Rmd
+++ b/topic1.Rmd
@@ -1,6 +1,37 @@
-{\rtf1\ansi\ansicpg936\cocoartf2822
-\cocoatextscaling0\cocoaplatform0{\fonttbl}
-{\colortbl;\red255\green255\blue255;}
-{\*\expandedcolortbl;;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
-}
+---
+title: "EDA for Completion Rate"
+output:
+  html_document:
+    theme: united
+    toc: true
+    toc_float: true
+    df_print: paged
+    code_folding: hide
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
+
+### 2.1 Distribution of Outcome (completion rate){#dist-outcome}
+
+Before fitting models, we inspect the distribution of the target variable (*completion_rate*). This helps assess skewness and understand the modeling target's general behavior.
+
+```{r}
+# Distribution of outcome variable (completion_rate)
+completion_rate_plot <- ggplot(df, aes(x = completion_rate)) +
+  geom_histogram(bins = 30, fill = "#9E9AC8", alpha = 0.8, 
+                 color = "#54278F", size = 0.4) +
+  geom_vline(aes(xintercept = mean(completion_rate)), 
+             color = "#E6550D", linetype = "dashed", size = 1) +
+  labs(title = "Distribution of Completion Rate",
+       x = "Completion Rate", 
+       y = "Frequency") +
+  theme_minimal() +
+  theme(plot.title = element_text(hjust = 0.5, face = "bold", size = 14))
+
+print(completion_rate_plot)
+```
+
+The distribution of completion_rate is roughly centered around 0.6–0.7 with no extreme skewness or heavy tails. Although the shape is not perfectly symmetric, it does not exhibit severe outliers or truncation.
