--- a/Group-Comparison-Analysis.Rmd
+++ b/Group-Comparison-Analysis.Rmd
@@ -2,7 +2,7 @@
 title: "Group Comparison Analysis"
 author: "ChuqiChen"
 date: "2025-12-03"
-output: html_document
+output: github_document
 ---
 ```{r}
 library(tidyverse)
