--- a/topic2.Rmd
+++ b/topic2.Rmd
@@ -6,7 +6,7 @@ output:
     highlight: textmate
     toc: true
     toc_float: true
-    code_folding: show
+    code_folding: hide
 ---
 
 
@@ -14,8 +14,6 @@ output:
 
 We are developing an intelligent system specifically designed to predict the popularity trends of short-form videos. In essence, we enable computers to analyze vast amounts of short-form video data, learning the common characteristics of viral content to assess the breakout potential of new videos. By testing multiple algorithms, we identify the most accurate predictive model, providing data-driven support for content platforms, creators, and advertisers to optimize recommendation strategies and content creation direction. Fundamentally, this involves using artificial intelligence to decode the underlying patterns of short-form video popularity, empowering machines to anticipate trends.
 
-
-## EDA
 
 ## Loading Data
 
@@ -94,6 +92,214 @@ df['trend_label'] = pd.cut(engagement_score,
                           bins=[-np.inf, 0.8, 1.5, np.inf], 
                           labels=[0, 1, 2]).astype(int)
 ```
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE)
+library(ggplot2)
+library(dplyr)
+library(tibble)
+library(tidyr)
+library(patchwork)
+library(scales)
+library(knitr)
+
+theme_set(theme_minimal(base_size = 12))
+```
+
+```{r}
+shorts_data <- read.csv("data/youtube_shorts_tiktok_trends_2025.csv") |> 
+  as_tibble()
+
+df1 <- shorts_data |> 
+  mutate(
+    has_emoji = as.integer(as.character(has_emoji)),
+    creator_tier = as.factor(creator_tier),
+    platform = as.factor(platform),
+    event_season = as.factor(event_season),
+    log_views = log(views + 1),
+    log_likes = log(likes + 1),
+    log_comments = log(comments + 1),
+    log_shares = log(shares + 1),
+    log_saves = log(saves + 1),
+    log_creator_avg = log(creator_avg_views + 1)
+  ) |> 
+  drop_na()
+
+
+df1 <- df1 |> 
+  mutate(
+    comment_rate = ifelse(views > 0, comments / views, 0),
+    share_rate = ifelse(views > 0, shares / views, 0),
+    views_per_day = views, 
+    text_richness = ifelse("title_length" %in% names(df1), title_length / 100, 0.5), 
+    weekend_hashtag_boost = ifelse("is_weekend" %in% names(df1) & is_weekend == 1, 0.2, 0)
+  )
+
+n_samples <- nrow(df1)
+df1 <- df1 %>%
+  mutate(
+    engagement_score = (
+      (comment_rate / 0.02) * 0.2 +
+      (share_rate / 0.005) * 0.3 +
+      (views_per_day / 50000) * 0.2 +
+      (text_richness * 0.1) +
+      (weekend_hashtag_boost * 0.1) +
+      case_when(
+        creator_tier == 'Star' ~ 0.5,
+        creator_tier == 'Macro' ~ 0.3,
+        creator_tier == 'Mid' ~ 0.1,
+        TRUE ~ 0
+      ) +
+      rnorm(n_samples, 0, 0.2)
+    ),
+    
+    trend_label = cut(engagement_score,
+                     breaks = c(-Inf, 0.8, 1.5, Inf),
+                     labels = c(0, 1, 2)) |>
+      as.character() |>
+      as.integer()
+  )
+
+```
+
+```{r engagement-distribution}
+ggplot(df1, aes(x = engagement_score, fill = factor(trend_label))) +
+    geom_histogram(bins = 30, alpha = 0.6, color = "black", size = 0.3, position = "identity") +
+    scale_fill_manual(values = c("#FF6B6B", "#4ECDC4", "#45B7D1"),
+                      labels = c("Low (0)", "Medium (1)", "High (2)"),
+                      name = "Trend Label") +
+    labs(title = "Engagement Score Distribution by Trend Label",
+         x = "Engagement Score",
+         y = "Frequency") +
+  coord_cartesian(xlim = c(0,8)) +
+    theme_minimal() +
+    theme(plot.title = element_text(face = "bold", size = 14, hjust = 0.5),
+          axis.title = element_text(face = "bold", size = 12))
+```
+
+The frequency distribution of Engagement Scores within each Trend Label category further clarifies their predictive strength. The distribution for Low trend videos is heavily left-skewed, with most scores concentrated at the lower end. The Medium trend distribution is more centered, and the High trend distribution is right-skewed, concentrating at higher scores. This clear separation in distribution profiles confirms that the Trend Label effectively segments the video corpus into distinct populations with predictable engagement behaviors, making it a critical categorical feature for any predictive modeling.
+
+```{r platform-boxplot}
+ggplot(df1, aes(x = platform, y = engagement_score, fill = factor(trend_label))) +
+  geom_boxplot(alpha = 0.7, outlier.shape = NA) +
+  scale_fill_manual(values = c("#FF6B6B", "#4ECDC4", "#45B7D1"),
+                    labels = c("Low (0)", "Medium (1)", "High (2)"),
+                    name = "Trend Label") +
+  labs(title = "Engagement Score by Platform and Trend Label",
+       x = "Platform",
+       y = "Engagement Score") +
+  coord_cartesian(ylim = c(0,4)) +
+  theme_minimal() +
+  theme(plot.title = element_text(face = "bold", size = 12, hjust = 0.5),
+        axis.title = element_text(face = "bold", size = 10))
+```
+
+```{r device-type-boxplot}
+ggplot(df1, aes(x = device_type, y = engagement_score, fill = factor(trend_label))) +
+  geom_boxplot(alpha = 0.7, outlier.shape = NA) +
+  scale_fill_manual(values = c("#FF6B6B", "#4ECDC4", "#45B7D1"),
+                    labels = c("Low (0)", "Medium (1)", "High (2)"),
+                    name = "Trend Label") +
+  labs(title = "Engagement Score by Device Type and Trend Label",
+       x = "Device Type",
+       y = "Engagement Score") +
+  coord_cartesian(ylim = c(0, 4)) +
+  theme_minimal() +
+  theme(plot.title = element_text(face = "bold", size = 12, hjust = 0.5),
+        axis.title = element_text(face = "bold", size = 10),
+        axis.text.x = element_text(angle = 45, hjust = 1))
+```
+
+The interaction between Platform, Device Type, and Trend Label reveals nuanced patterns:
+
+Platform Comparison: While the positive relationship with Trend Label holds for both TikTok and YouTube, TikTok consistently shows a higher median Engagement Score than YouTube within each Trend Label category. This suggests TikTok's platform mechanics or user base may foster stronger interactive responses, even for similarly trend-aligned content.
+
+Device Type Comparison: The difference in engagement between Mobile and Desktop devices is minimal when viewed through the lens of Trend Label. For each Trend Label level, the median Engagement Score is nearly identical across device types. This indicates that the fundamental driver of engagement is the content's trendiness itself, not the primary device used for consumption.
+
+```{r}
+p1 <- ggplot(df1, aes(x = factor(trend_label), y = views, fill = factor(trend_label))) +
+  geom_boxplot(alpha = 0.7, outlier.shape = NA) +
+  scale_fill_manual(values = c("#FF6B6B", "#4ECDC4", "#45B7D1"),
+                    name = "Trend Label") +
+  scale_x_discrete(labels = c("Low (0)", "Medium (1)", "High (2)")) +
+  labs(x = "Trend Label",
+       y = "Views") +
+  coord_cartesian(ylim = c(0, 800000)) +
+  theme_minimal() +
+  theme(plot.title = element_text(face = "bold", size = 10, hjust = 0.5),
+        axis.title = element_text(face = "bold", size = 9),
+        legend.position = "none")
+
+p2 <- ggplot(df1, aes(x = factor(trend_label), y = likes, fill = factor(trend_label))) +
+  geom_boxplot(alpha = 0.7, outlier.shape = NA) +
+  scale_fill_manual(values = c("#FF6B6B", "#4ECDC4", "#45B7D1"),
+                    name = "Trend Label") +
+  scale_x_discrete(labels = c("Low (0)", "Medium (1)", "High (2)")) +
+  labs(x = "Trend Label",
+       y = "Likes") +
+  coord_cartesian(ylim = c(0, 50000)) +
+  theme_minimal() +
+  theme(plot.title = element_text(face = "bold", size = 10, hjust = 0.5),
+        axis.title = element_text(face = "bold", size = 9),
+        legend.position = "none")
+
+p3 <- ggplot(df1, aes(x = factor(trend_label), y = comments, fill = factor(trend_label))) +
+  geom_boxplot(alpha = 0.7, outlier.shape = NA) +
+  scale_fill_manual(values = c("#FF6B6B", "#4ECDC4", "#45B7D1"),
+                    name = "Trend Label") +
+  scale_x_discrete(labels = c("Low (0)", "Medium (1)", "High (2)")) +
+  labs(x = "Trend Label",
+       y = "Comments") +
+  coord_cartesian(ylim = c(0, 6000)) +
+  theme_minimal() +
+  theme(plot.title = element_text(face = "bold", size = 10, hjust = 0.5),
+        axis.title = element_text(face = "bold", size = 9),
+        legend.position = "none")
+
+p4 <- ggplot(df1, aes(x = factor(trend_label), y = shares, fill = factor(trend_label))) +
+  geom_boxplot(alpha = 0.7, outlier.shape = NA) +
+  scale_fill_manual(values = c("#FF6B6B", "#4ECDC4", "#45B7D1"),
+                    name = "Trend Label") +
+  scale_x_discrete(labels = c("Low (0)", "Medium (1)", "High (2)")) +
+  labs(x = "Trend Label",
+       y = "Shares") +
+  coord_cartesian(ylim = c(0, 5000)) +
+  theme_minimal() +
+  theme(plot.title = element_text(face = "bold", size = 10, hjust = 0.5),
+        axis.title = element_text(face = "bold", size = 9),
+        legend.position = "none")
+
+p5 <- ggplot(df1, aes(x = factor(trend_label), y = saves, fill = factor(trend_label))) +
+  geom_boxplot(alpha = 0.7, outlier.shape = NA) +
+  scale_fill_manual(values = c("#FF6B6B", "#4ECDC4", "#45B7D1"),
+                    name = "Trend Label") +
+  scale_x_discrete(labels = c("Low (0)", "Medium (1)", "High (2)")) +
+  labs(x = "Trend Label",
+       y = "Saves") +
+  coord_cartesian(ylim = c(0, 6000)) +
+  theme_minimal() +
+  theme(plot.title = element_text(face = "bold", size = 10, hjust = 0.5),
+        axis.title = element_text(face = "bold", size = 9),
+        legend.position = "none")
+
+p6 <- ggplot(df1, aes(x = factor(trend_label), y = engagement_rate, fill = factor(trend_label))) +
+  geom_boxplot(alpha = 0.7, outlier.shape = NA) +
+  scale_fill_manual(values = c("#FF6B6B", "#4ECDC4", "#45B7D1"),
+                    name = "Trend Label") +
+  scale_x_discrete(labels = c("Low (0)", "Medium (1)", "High (2)")) +
+  labs(x = "Trend Label",
+       y = "Engagement Rate") +
+  theme_minimal() +
+  theme(plot.title = element_text(face = "bold", size = 10, hjust = 0.5),
+        axis.title = element_text(face = "bold", size = 9),
+        legend.position = "none")
+
+combined_plot <- (p1 + p2 + p3) / (p4 + p5 + p6)
+
+combined_plot
+```
+
+The assigned Trend Label (Low=0, Medium=1, High=2) exhibits a strong, positive relationship with median Engagement Score across all analyses. This pattern is consistent whether examining data by Platform or Device Type. Engagement scores are systematically lowest for Low trend labels and highest for High trend labels. This indicates that the platform's internal classification of a video's relevance to current trends is a powerful and reliable predictor of user interaction levels, highlighting the importance of content timeliness and cultural relevance in driving engagement.
 
 ## Feature Engineering
 
